--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
   },
   "devDependencies": {
     "typescript": "^3.7.2"
+  },
+  "dependencies": {
+    "@types/faker": "^4.1.8",
+    "faker": "^4.1.0"
   }
 }
